Fix headline logo alignment
Remove left padding so that the logo is aligned to the headline title
snd container below.

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ img {
 .logo {
   cursor: pointer;
   width: 150px;
-  padding: 0.625rem;
+  padding: 0.625rem 0.625rem 0.625rem 0;
 }
 
 h1 {
